<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="userVm"
            type="net.rmitsolutions.eskool.viewmodels.UserViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingBottom="0dp"
        android:paddingEnd="@dimen/padding"
        android:paddingStart="@dimen/padding"
        android:paddingTop="@dimen/padding">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/lblUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding"
            app:errorTextAppearance="@style/ErrorStyle">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_hint_username"
                android:inputType="text"
                android:maxLines="1"
                android:text="@={userVm.userName}" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/lblPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding"
            app:errorTextAppearance="@style/ErrorStyle">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_hint_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:text="@={userVm.password}" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:background="@color/white"
            android:elevation="@dimen/welcome_button_bar_elevation"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="@dimen/spacing8dp"
            android:paddingTop="@dimen/padding">

            <Button
                android:id="@+id/buttonLogin"
                style="?android:borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="?actionBarSize"
                android:onClick="onLoginClick"
                android:paddingEnd="48dp"
                android:paddingStart="48dp"
                android:text="@string/login"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textColor="@color/colorPrimary" />

            <Button
                android:id="@+id/buttonForgotPwd"
                style="?android:borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/padding"
                android:onClick="onForgotPasswordClick"
                android:paddingEnd="48dp"
                android:paddingStart="48dp"
                android:text="@string/login_forgot_password"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textColor="@color/app_body_text_light" />

        </LinearLayout>

    </LinearLayout>
</layout>